--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -2,5 +2,5 @@
     name: autoflake
     entry: autoflake
     language: python
-    'types': [python]
+    types: [python]
     require_serial: true
